# Reversi_Game

./: CMakeLists.txt  LICENSE  Peking.icns  README.md  boardwidget.cpp  boardwidget.h  globals.h  mainwindow.cpp  mainwindow.h  resources.qrc
